# Droid_NDK

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Application.mk  main.c
app/src/main/jni/: ActivityHandler.hpp  Android.mk  Application.mk  Asteroid.cpp  Asteroid.hpp  CMakeLists.txt  Configuration.cpp  Configuration.hpp  DroidBlaster.cpp  DroidBlaster.hpp  EventLoop.cpp  EventLoop.hpp  GraphicsManager.cpp  GraphicsManager.hpp  InputHandler.hpp  InputManager.cpp  InputManager.hpp  Log.cpp  Main.cpp  MoveableBody.cpp  MoveableBody.hpp  PhysicsManager.cpp  PhysicsManager.hpp  Resource.cpp  Resource.hpp  Ship.cpp  Ship.hpp  Sound.cpp  Sound.hpp  SoundManager.cpp  SoundManager.hpp  SoundQueue.cpp  SoundQueue.hpp  Sprite.cpp  Sprite.hpp  SpriteBatch.cpp  SpriteBatch.hpp  StarField.cpp  StarField.hpp  TimeManager.cpp  (+2 more)
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
